# panaversity-specifyplus-projects

./: .gitignore  CLAUDE.md  Dockerfile  README.md  README_HF.md  app.py  pyproject.toml  render.yaml
.claude/: settings.local.json
.specify/memory/: constitution.md
history/prompts/001-cli-calculator/: 002-cli-calculator-specification.spec.prompt.md  003-cli-calculator-implementation-plan.plan.prompt.md  004-cli-calculator-task-generation.tasks.prompt.md  005-cli-calculator-full-implementation.green.prompt.md
history/prompts/constitution/: 001-initial-constitution-python-calculator.constitution.prompt.md
specs/001-cli-calculator/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-cli-calculator/checklists/: requirements.md
specs/001-cli-calculator/contracts/: cli-interface.md
src/api/: __init__.py  main.py  routes.py  schemas.py
src/calculator/: __init__.py  __main__.py  cli.py  errors.py  formatter.py
src/calculator/operations/: __init__.py  advanced.py  basic.py  scientific.py
src/frontend/: index.html
src/frontend/css/: style.css
src/frontend/js/: app.js
tests/: conftest.py
tests/api/: test_api.py
tests/integration/: __init__.py  test_cli.py
tests/unit/: __init__.py  test_advanced_ops.py  test_basic_ops.py  test_cli.py  test_errors.py  test_formatter.py
